@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.2
-DOS2UNIX_VERSION_SHORT = 52
-DOS2UNIX_DATE = 2011-01-31
+DOS2UNIX_VERSION = 5.2.1-beta1
+DOS2UNIX_VERSION_SHORT = 521b1
+DOS2UNIX_DATE = 2011-02-04
