@@ -1,3 +1,8 @@
+2011-02-04 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: Replace GPL (accidently patched in) with FreeBSD license.
+	* man/man1/Makefile: Fix perl command for for DOS alike file systems
+	  (Can't do inplace edit without backup.).
+
 2011-01-31 Erwin Waterlander <waterlan@xs4all.nl>
 	* Version 5.2
 
